--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
     height: 100vh;                
     margin: 0;                        
     padding: 0;
+    overflow-y: hidden;
     }
  
 
@@ -239,4 +240,3 @@ nav{
     left: 0;
     z-index: 5;
 }
-
